--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -70,6 +70,7 @@ jobs:
 
   build-ms-product:
     runs-on: ubuntu-latest
+    environment: env_prod
     needs: build-api-gateway
 
     steps:
@@ -104,6 +105,7 @@ jobs:
 
   build-ms-inventory:
     runs-on: ubuntu-latest
+    environment: env_prod
     needs: build-ms-product
 
     steps:
@@ -138,6 +140,7 @@ jobs:
 
   deploy-ec2:
     runs-on: ubuntu-latest
+    environment: env_prod
     needs: build-ms-inventory
 
     steps:
